--- a/TriforceApp/AndroidManifest.xml
+++ b/TriforceApp/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
+            android:theme="@android:style/Theme.NoTitleBar"
             android:name="edu.gatech.cs2340.triforce.TriforceMain"
             android:label="@string/app_name" >
             <intent-filter>
