--- a/TriforceApp/AndroidManifest.xml
+++ b/TriforceApp/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-sdk android:minSdkVersion="15" />
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/tforce_app_logo"
         android:label="@string/app_name" >
         <activity
             android:theme="@android:style/Theme.NoTitleBar"
