--- a/TriforceApp/AndroidManifest.xml
+++ b/TriforceApp/AndroidManifest.xml
@@ -18,7 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="edu.gatech.cs2340.triforce.RegisterActivity"></activity>
+        <activity 
+            android:theme="@android:style/Theme.NoTitleBar" 
+            android:name="edu.gatech.cs2340.triforce.RegisterActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="edu.gatech.cs2340.triforce.REGISTERACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
