Database, Registration, and Login are all fully functional. Added a View Database button to check our database for debugging purposes.
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@141 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/AndroidManifest.xml
+++ b/TriforceApp/AndroidManifest.xml
@@ -27,6 +27,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity 
+            android:theme="@android:style/Theme.NoTitleBar" 
+            android:name="edu.gatech.cs2340.triforce.SQLView"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="edu.gatech.cs2340.triforce.SQLVIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
