--- a/TriforceApp/AndroidManifest.xml
+++ b/TriforceApp/AndroidManifest.xml
@@ -19,8 +19,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity" >
-        </activity>
         <activity
             android:name="edu.gatech.cs2340.triforce.RegisterActivity"
             android:label="@string/app_name"
@@ -37,6 +35,16 @@
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="edu.gatech.cs2340.triforce.SQLVIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="edu.gatech.cs2340.triforce.List"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
+            <intent-filter>
+                <action android:name="edu.gatech.cs2340.triforce.LIST" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
