--- a/TriforceApp/AndroidManifest.xml
+++ b/TriforceApp/AndroidManifest.xml
@@ -40,11 +40,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="edu.gatech.cs2340.triforce.List"
+            android:name="edu.gatech.cs2340.triforce.TaskListActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
-                <action android:name="edu.gatech.cs2340.triforce.LIST" />
+                <action android:name="edu.gatech.cs2340.triforce.TASKLISTACTIVITY" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="edu.gatech.cs2340.triforce.NewTaskActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
+            <intent-filter>
+                <action android:name="edu.gatech.cs2340.triforce.NEWTASKACTIVITY" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
