added check image. changed edit button into check button. edit button next to each task.
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@200 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/AndroidManifest.xml
+++ b/TriforceApp/AndroidManifest.xml
@@ -59,6 +59,16 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="edu.gatech.cs2340.triforce.EditTaskActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
+            <intent-filter>
+                <action android:name="edu.gatech.cs2340.triforce.EDITTASKACTIVITY" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
