--- a/TriforceApp/AndroidManifest.xml
+++ b/TriforceApp/AndroidManifest.xml
@@ -5,10 +5,12 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="15" />
-
-    <application
+	<!-- for google maps to update -->
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application
         android:icon="@drawable/tforce_app_logo"
-        android:label="@string/app_name" >
+        android:label="@string/app_name">
+        <uses-library android:name="com.google.android.maps" />
         <activity
             android:name="edu.gatech.cs2340.triforce.TriforceMain"
             android:label="@string/app_name"
@@ -68,6 +70,10 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+        <!-- Google Maps -->
+        <activity android:name="gmap" android:label="@string/app_name"
+     		android:theme="@android:style/Theme.NoTitleBar">
         </activity>
     </application>
 
