tasks are viewable
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@232 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/AndroidManifest.xml
+++ b/TriforceApp/AndroidManifest.xml
@@ -67,6 +67,16 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="edu.gatech.cs2340.triforce.ViewTaskActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
+            <intent-filter>
+                <action android:name="edu.gatech.cs2340.triforce.VIEWTASKACTIVITY" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name="edu.gatech.cs2340.triforce.EditTaskActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
