--- a/TriforceApp/AndroidManifest.xml
+++ b/TriforceApp/AndroidManifest.xml
@@ -10,12 +10,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
+   
+    <!--  for Junit stuff -->
+    <instrumentation android:name="android.test.InstrumentationTestRunner"
+    				android:targetPackage="edu.gatech.cs2340.triforce"
+    				android:label="" />
     <application
         android:icon="@drawable/tforce_app_logo"
         android:label="@string/app_name" >
         <uses-library android:name="com.google.android.maps" />
-
+    	<uses-library android:name ="android.test.runner"/> 
         <activity
             android:name="edu.gatech.cs2340.triforce.TriforceMain"
             android:label="@string/app_name"
