--- a/TriforceApp/AndroidManifest.xml
+++ b/TriforceApp/AndroidManifest.xml
@@ -12,9 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
    
     <!--  for Junit stuff -->
-    <instrumentation android:name="android.test.InstrumentationTestRunner"
-    				android:targetPackage="edu.gatech.cs2340.triforce"
-    				android:label="" />
+    <instrumentation android:targetPackage="edu.gatech.cs2340.r" android:name="android.test.InstrumentationTestRunner"/>
     <application
         android:icon="@drawable/tforce_app_logo"
         android:label="@string/app_name" >
